# notator

./: Cargo.toml  README.md
src/: main.rs
style/: style.css
templates/: calc_result.html.tera  calculator.html.tera  create_note.html.tera  first_extend_template.html.tera  login_form.html.tera  note_created.html.tera  test_template_base.html.tera
