[package]
name = "notator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "serde_json", "tls"] }
yew = { version = "0.21.0", features = ["csr"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }
